testsuite/tests/typecheck/should_fail/tcfail004.stderr

tcfail004.hs:3:9: error:
    Couldn't match expected type ‘(t0, t1)’
                with actual type ‘(Integer, Integer, Integer)’
    Relevant bindings include
      f :: t0 (bound at tcfail004.hs:3:2)
      g :: t1 (bound at tcfail004.hs:3:4)
    In the expression: (1, 2, 3)
    In a pattern binding: (f, g) = (1, 2, 3)
